--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ body {
 .photoFrame {
     border: 2px solid grey;
     border-radius: 5px;
-    max-width: 80%;
-    margin-bottom: 25px;
+    max-width: 50%;
+    display: block;
+    margin: 0 auto;
+}
+
+button {
+    margin: 25px;
 }
