--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,8 @@ body {
 }
 
 .main h3 {
-    font-size: 30px;
-    margin-bottom: 25px;
+    font-size: 25px;
+    margin-top: 25px;
 }
 
 .photoFrame {
