--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,23 @@ body {
 .button {
     margin: 25px;
 }
+
+@media screen and (max-width: 600px) {
+    .main h1 {
+            font-size: 44px;
+        }
+
+        .main h2 {
+            font-size: 30px;
+        }
+
+        .main h3 {
+            font-size: 20px;
+            margin-top: 15px;
+        }
+
+    .photoFrame {
+            max-width: 80%;
+        }
+
+}
